--- a/ui/ui-switch/ui-switch.css
+++ b/ui/ui-switch/ui-switch.css
@@ -23,25 +23,30 @@ ui-switch{
 
   &[ui]{
     transition-duration:var(--ui-transition-duration-default);
-    transition-property:background-color,outline-color,padding-inline-start;}
+    transition-property:background-color,outline-color,padding-inline-start;
+  }
 
   &::before{
     height:var(--ui-switch-thumb-height);
     width:var(--ui-switch-thumb-width);
     border-radius:var(--ui-switch-thumb-border-radius);
     background-color:var(--ui-switch-thumb-surface-color);
-    content:'';}
+    content:'';
+  }
 
   &[checked]{
     padding-inline-start:var(--ui-switch-thumb-position-end);
-    background-color:var(--ui-switch-track-checked-surface-color);}
+    background-color:var(--ui-switch-track-checked-surface-color);
+  }
 
   /* shape */
   &[shape="pill"]{
     --ui-switch-track-border-radius:var(--ui-border-radius-pill);
-    --ui-switch-thumb-border-radius:var(--ui-border-radius-circle);}
+    --ui-switch-thumb-border-radius:var(--ui-border-radius-circle);
+  }
 
   &[shape="square"]{
     --ui-switch-track-border-radius:var(--ui-border-radius-square);
-    --ui-switch-thumb-border-radius:var(--ui-border-radius-square);}
+    --ui-switch-thumb-border-radius:var(--ui-border-radius-square);
+  }
 }
