--- a/ui/ui-checkbox/ui-checkbox.css
+++ b/ui/ui-checkbox/ui-checkbox.css
@@ -7,6 +7,14 @@ ui-checkbox{
   --ui-checkbox-border-color:var(--ui-color-gray-500);
   --ui-checkbox-svg-surface-color:var(--ui-color-blue-500);
 
+  appearance:none;
+  cursor:pointer;
+  touch-action:manipulation;
+  outline-offset:var(--ui-outline-offset);
+  outline-width:var(--ui-outline-width);
+  outline-style:var(--ui-outline-style);
+  outline-color:transparent;
+
   position:relative;
   display:inline-flex;
   align-items:center;
@@ -20,6 +28,16 @@ ui-checkbox{
   &[ui]{
     transition-duration:var(--ui-transition-duration-default);
     transition-property:outline-color;
+  }
+
+  &[disabled]{
+    cursor:not-allowed;
+    opacity:0.5;
+    pointer-events:auto;
+  }
+
+  &:focus-visible:not([disabled]){
+    outline-color:var(--ui-outline-color);
   }
 
   &::before{
