--- a/ui/ui-spinner/ui-spinner.css
+++ b/ui/ui-spinner/ui-spinner.css
@@ -12,3 +12,8 @@ ui-spinner{
     animation:rotate360 0.8s linear infinite;
   }
 }
+
+@keyframes rotate360{
+  0% {transform:rotate(0deg);}
+  100% {transform:rotate(360deg);}
+}
