--- a/ui/styles/ui-light.css
+++ b/ui/styles/ui-light.css
@@ -1,7 +1,4 @@
 :root[data-theme='light']{
-  /* theme */
-  --theme-background-color:var(--ui-color-white);
-
   /* surface colors */
   --ui-surface-color-default:var(--ui-color-gray-800);
   --ui-surface-color-hover:var(--ui-color-gray-750);
@@ -21,5 +18,5 @@
   --ui-outline-color:var(--ui-color-gray-500);
 
   /* scrollbar */
-  --ui-scrollbar-color:var(--ui-color-white);
+  --ui-scrollbar-color:var(--ui-color-black);
 }
